# sysml-v2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
docker/: docker-compose.yml
models/: package.sysml
models/examples/: requirements.sysml
src/sysml_v2/: __init__.py  config.py
src/sysml_v2/api/: __init__.py  client.py
src/sysml_v2/cli/: __init__.py  init_cmd.py  serve.py  validate.py
src/sysml_v2/parsing/: __init__.py  loader.py
src/sysml_v2/templates/: Makefile  gitignore  pyproject.toml.tpl  sysml.toml
src/sysml_v2/templates/_vscode/: extensions.json  settings.json
src/sysml_v2/templates/docker/: cluster.trig  docker-compose.gearshift.yml  docker-compose.yml
src/sysml_v2/templates/models/examples/: vehicle.sysml
src/sysml_v2/templates/notebooks/: getting-started.ipynb
tests/: test_api_client.py  test_cli_init.py  test_cli_serve.py  test_cli_validate.py  test_config.py
