[project]
name = "sysml-v2-workspace"
version = "0.1.0"
description = "SysML v2 model-based systems engineering workspace"
requires-python = ">=3.12"
dependencies = [
    "sysml2py>=0.5.3",
    "jupyterlab>=4.0",
    "requests>=2.31",
    "httpx>=0.27",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
# Sensmetry Syside Automator — requires a license key (SYSIDE_LICENSE_KEY env var)
syside = ["syside>=0.8"]
# Official OMG API client — installed from GitHub source
api-client = [
    "sysml-v2-api-client @ git+https://github.com/Systems-Modeling/SysML-v2-API-Python-Client.git",
]
# All optional dependencies
all = [
    "syside>=0.8",
    "sysml-v2-api-client @ git+https://github.com/Systems-Modeling/SysML-v2-API-Python-Client.git",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
